refactor: remove unused `SortingServiceImpl` implementation, redundant tests, and dependencies across multiple services and repositories. Optimize class structure and method usage.